# ollama-arena

./: .editorconfig  .gitignore  .ollama-arena.toml.example  .ollama-arena.yaml.example  .pre-commit-config.yaml  ANNOUNCEMENT_LOCALLAMA.md  ANNOUNCEMENT_REDDIT.md  ANNOUNCEMENT_SHOW_HN.md  ARENA_CHANGES.md  CHANGELOG.md  CLI_ENHANCEMENT_SUMMARY.md  CLI_QUICKSTART.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_README.md  DEMO_RECORDING.md  FRONTEND_MIGRATION_GUIDE.md  GEMINI.md  HISTORY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_INTEGRATION_SUMMARY.md  Makefile  README.md  SECURITY.md  V2.5.0_ENHANCEMENTS_SUMMARY.md  V2.5.0_IMPLEMENTATION_SUMMARY.md  V2_5_0_IMPLEMENTATION_SUMMARY.md  V3.0.0_RELEASE_SUMMARY.md  arena.db-shm  arena.db-wal  completion.bash  completion.fish  demo_script.sh  mkdocs.yml  patch_html.py  patch_html2.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-leaderboard.yml  publish.yml  test.yml
docs/: CSP_INTEGRATION.md  GENOME_EXPLORER_ARCHITECTURE.md  PROJECT_MANIFEST.md  agents.md  antigravity_briefing.md  backends.md  benchmarks.md  cli.md  index.md  mcp.md  security.md  v3.0.0-roadmap.md  web.md
docs/adr/: 001-security-enhancements.md  002-performance-optimizations.md  003-storage-improvements.md  004-mcp-modularization.md  005-distributed-architecture.md  006-csp-security-improvements.md  007-v3.0.0-apex-evolution-architecture.md  008-multi-agent-communication-protocol.md  009-vm-sandbox-security-isolation.md  010-cryptographic-proof-of-eval.md
docs/superpowers/plans/: 2026-06-22-godot-l3-world.md
docs/superpowers/specs/: 2026-06-21-emergency-stop-design.md  2026-06-22-godot-l3-world-design.md
docs/universes/: local-resource-integration-audit.md  repo-audit.md
examples/: agent_resolve.py  finetune_pipeline.py  huggingface_eval.py  mcp_custom_tool.py  multi_backend.py  multilang_battle.py  quickstart.py  tournament.py  vision_benchmark.py
examples/github_actions/: llm-benchmark.yml
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/components/: BattleVisualizer.tsx  NeuralMap3D.tsx
godot_world/: export_presets.cfg  project.godot
godot_world/scenes/: action_bubble.tscn  world_renderer.tscn
godot_world/scripts/: action_bubble.gd  action_bubble.gd.uid  camera_rig.gd  camera_rig.gd.uid  world_renderer.gd  world_renderer.gd.uid
godot_world/scripts/scenario_handlers/: mafia_handler.gd  mafia_handler.gd.uid  scenario_handler.gd  (+3 more)
godot_world/tests/: test_mafia_handler.gd  test_mafia_handler.gd.uid  test_sims_world_handler.gd  test_sims_world_handler.gd.uid  test_smoke.gd  test_smoke.gd.uid  test_world_renderer.gd  test_world_renderer.gd.uid
ide-extension/vscode/: package.json  tsconfig.json
ollama_arena/: __init__.py  _banner.py  agent_loop.py  arena.py  cli.py  elo.py  evaluator.py  hardware_fit.py  judge.py  mcp_client.py  mcp_config.py  memory_scheduler.py  migrations.py  model_caps.py  model_registry.py  model_router.py  performance.py  sandbox.py  secrets_store.py  utils.py  web.py  webhooks.py  webui_bridge.py
ollama_arena/agentic/: __init__.py  redteam.py  sandbox.py  swarm.py
ollama_arena/backends/: __init__.py  anthropic.py  auto.py  base.py  ollama.py  openai_compat.py  spec.py  transformers_backend.py
ollama_arena/cli/: __init__.py  agentic.py  agents.py  common.py  data.py  finetune_cmd.py  genome_cmd.py  match.py  mcp_cmd.py  p2p_cmd.py  sim_cmd.py  web_cmd.py
ollama_arena/datasets/: __init__.py  loader.py
ollama_arena/finetune/: __init__.py  analyzer.py  generator.py  ollama_export.py  unsloth_runner.py
ollama_arena/finetuning/: __init__.py  adversarial_gen.py  dpo_pipeline.py  orchestrator.py  unsloth_integration.py
ollama_arena/genome/: __init__.py  db.py  evidence.py  graph.py  registry.py  resolver.py  scanner.py
ollama_arena/mcp/: __init__.py  orchestrator.py  registry.py  security.py  transport.py
ollama_arena/p2p/: __init__.py  crypto_proof.py  distribution.py  leaderboard.py  node.py
ollama_arena/rag/: __init__.py  indexer.py  searcher.py  tools.py
ollama_arena/sandboxes/: __init__.py  base.py  runner.py  seccomp.json  security.py  wasm_runner.py
ollama_arena/simulations/: __init__.py  storage.py
ollama_arena/storage/: __init__.py  base.py  genome_store.py
ollama_arena/tasks/: __init__.py  coding.py  coding_multilang.py  creative.py  inspection.py  knowledge.py  long_horizon.py  math.py  planning.py  reasoning.py  security.py  structured_json.py  tool_use.py  vision.py
ollama_arena/telemetry/: __init__.py  bandwidth.py  base.py  energy.py  quantization.py
ollama_arena/visualize/: __init__.py  charts.py  reports.py
ollama_arena/web_routes/: __init__.py  agentic_routes.py  p2p_routes.py
static/: agent_trace.js  arena3d.js  genome.js
static/css/: arena.css
static/js/: agentic.js  bootstrap.js  evals-table.js  experiment-diff.js  match.js  p2p.js  providers.js  sim.js  spec.js  trace-timeline.js  utils.js  world.js  ws-client.js
templates/: base.html  genome.html  index.html
tests/: conftest.py  test_adversarial_gen.py  test_agent_loop.py  test_agent_trajectory.py  test_agentic.py  test_arena2.py  test_ast_security.py  test_backends.py  test_bandwidth_monitor.py  test_bandwidth_monitor2.py  test_browser_tools.py  test_cli_agentic.py  test_cli_agents.py  test_cli_agents2.py  test_cli_common.py  test_cli_common2.py  test_cli_data.py  test_cli_finetune.py  test_cli_genome.py  test_cli_main.py  test_cli_match.py  test_cli_mcp_cmd.py  test_cli_p2p_cmd.py  test_cli_sim_cmd.py  test_cloud_presets.py  test_dataset_loaders.py  test_dpo_storage.py  test_elo.py  test_energy_monitor.py  test_evaluator_extended.py  test_evaluator_security.py  test_finetune_generator.py  test_finetuning_dataclasses.py  test_finetuning_orchestrator.py  test_genome_db.py  test_genome_graph.py  test_genome_lineage_seed.py  test_genome_resolver.py  test_genome_scanner.py  test_genome_scanner2.py  (+88 more)
tests/p2p/: __init__.py  test_distribution.py  test_node.py
(+48 files in other folders)
