[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-arena"
version = "2.4.0"
description = "Pair-wise ELO evaluation arena for local LLMs."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "nazkari86-lab" }]
keywords = ["llm", "ollama", "benchmark", "elo", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]
viz = [
    "plotly>=5.18",
]
datasets = [
    "datasets>=2.14",
    "huggingface_hub>=0.20",
]
hf = [
    "transformers>=4.40",
    "torch>=2.2",
    "accelerate>=0.30",
]
finetune = [
    "unsloth>=2024.8",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.9",
    "accelerate>=0.30",
    "datasets>=2.14",
    "torch>=2.2",
    "bitsandbytes>=0.43; sys_platform != 'darwin'",
]
all = [
    "fastapi>=0.100", "uvicorn[standard]>=0.22",
    "plotly>=5.18",
    "datasets>=2.14", "huggingface_hub>=0.20",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
ollama-arena = "ollama_arena.cli:main"
llm-arena   = "ollama_arena.cli:main"

[project.urls]
Homepage      = "https://github.com/nazkari86-lab/ollama-arena"
Repository    = "https://github.com/nazkari86-lab/ollama-arena"
Issues        = "https://github.com/nazkari86-lab/ollama-arena/issues"
Documentation = "https://github.com/nazkari86-lab/ollama-arena#readme"
Changelog     = "https://github.com/nazkari86-lab/ollama-arena/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["ollama_arena*"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
