[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-arena"
version = "3.2.0"
description = "Continuous AI evolution factory with agentic evaluation, auto-finetuning, and global P2P grid."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "nazkari86-lab" }]
keywords = ["llm", "ollama", "benchmark", "elo", "evaluation", "finetuning", "p2p", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=0.1.0",
]
mcp-browser = [
    "mcp>=0.1.0",
    "playwright>=1.40",
]
wasm = [
    "wasmtime>=24.0",
]
web = [
    "fastapi>=0.100",
    "starlette<1.0",  # >=1.0 requires the new 'httpx2' package for TestClient
    "uvicorn[standard]>=0.22",
    "jinja2>=3.1",
    "slowapi>=0.1.9",
    "cryptography>=49.0.0",
]
viz = [
    "plotly>=5.18",
]
datasets = [
    "datasets>=2.14",
    "huggingface_hub>=0.20",
]
hf = [
    "transformers>=4.40",
    "torch>=2.2",
    "accelerate>=0.30",
]
finetune = [
    "unsloth>=2024.8",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.9",
    "accelerate>=0.30",
    "datasets>=2.14",
    "torch>=2.2",
    "bitsandbytes>=0.43; sys_platform != 'darwin'",
]
config = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]
agentic = [
    "kubernetes>=28.0",
]
p2p = [
    "web3>=6.0",
    "py-evm>=0.7",
    "cryptography>=49.0.0",
]
telemetry = [
    "pynvml>=11.0",  # NVIDIA NVML
    "py3nvml>=0.2.0",  # Alternative NVML binding
    "psutil>=5.9",
]
zkproof = [
    "cryptography>=49.0.0",
]
all = [
    "fastapi>=0.100", "uvicorn[standard]>=0.22",
    "plotly>=5.18",
    "datasets>=2.14", "huggingface_hub>=0.20",
    "mcp>=0.1.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "kubernetes>=28.0",
    "web3>=6.0",
    "py-evm>=0.7",
    "cryptography>=49.0.0",
    "pynvml>=11.0",
    "py3nvml>=0.2.0",
    "psutil>=5.9",
]
dev = [
    "pytest>=7",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "numpy>=1.24",  # used by tests/test_rag_*_extended.py to build mock embedding vectors
    "httpx>=0.24",  # required by starlette.testclient.TestClient (tests/test_web_*.py)
]

[project.scripts]
ollama-arena = "ollama_arena.cli:main"
llm-arena   = "ollama_arena.cli:main"

[project.urls]
Homepage      = "https://github.com/nazkari86-lab/ollama-arena"
Repository    = "https://github.com/nazkari86-lab/ollama-arena"
Issues        = "https://github.com/nazkari86-lab/ollama-arena/issues"
Documentation = "https://github.com/nazkari86-lab/ollama-arena#readme"
Changelog     = "https://github.com/nazkari86-lab/ollama-arena/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["ollama_arena*"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/*", "static/css/*", "static/js/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
